--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-lifecycle-log",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Vue plugin to log the components' licefycles",
   "main": "dist/index.js",
   "scripts": {
@@ -29,5 +29,8 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "babel-preset-minify": "^0.5.0"
+  },
+  "peerDependencies": {
+    "vue": ">=2.0.0"
   }
 }
